--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <thead>
 <tr>
     <td>Choose your plan</td>
-    <td>10$</td>
-    <td>30$</td>
-    <td>59$</td>
-    <td>99$</td>
+    <td>starter <br> <br> 10$ <br> per month</td>
+    <td>econom <br> <br> 30$ <br> per mont</td>
+    <td>standart <br> <br> 59$ <br> per mont</td>
+    <td>professional <br> <br> 99$ <br> per mont</td>
 </tr>
     </thead>
     <tbody>
@@ -26,8 +26,6 @@
             <td>100GB</td>
             <td>Unlimeted</td>
         </tr>
-    </tbody>
-    <tbody>
         <tr>
             <td>Bandwidth per month</td>
             <td>120GB</td>
@@ -35,8 +33,6 @@
             <td>610GB</td>
             <td>1300GB</td>
         </tr>
-    </tbody>
-    <tbody>
         <tr>
             <td>Email accounts</td>
             <td>1</td>
@@ -44,8 +40,6 @@
             <td>60</td>
             <td>Unlimeted</td>
         </tr>
-    </tbody>
-    <tbody>
         <tr>
             <td>MySQL databases</td>
             <td>1</td>
@@ -53,8 +47,6 @@
             <td>60</td>
             <td>Unlimeted</td>
         </tr>
-    </tbody>
-    <tbody>
         <tr>
             <td>25h support</td>
             <td>No</td>
@@ -62,8 +54,6 @@
             <td>Yes</td>
             <td>Yes</td>
         </tr>
-    </tbody>
-    <tbody>
         <tr>
             <td>Support tickets per month</td>
             <td>2</td>
