--- a/index.html
+++ b/index.html
@@ -12,50 +12,50 @@
     <thead>
 <tr>
     <td>Choose your plan</td>
-    <td>starter <br> <br> 10$ <br> per month</td>
-    <td>econom <br> <br> 30$ <br> per mont</td>
-    <td>standart <br> <br> 59$ <br> per mont</td>
-    <td>professional <br> <br> 99$ <br> per mont</td>
+    <td>starter <br> <br> <span class="size">10$</span> <br> per month</td>
+    <td>econom <br> <br> <span class="size">30$</span> <br> per mont</td>
+    <td>standart <br> <br> <span class="size">59$</span> <br> per mont</td>
+    <td>professional <br> <br> <span class="size">99$</span> <br> per mont</td>
 </tr>
     </thead>
     <tbody>
         <tr>
-            <td>Amount of space</td>
+            <td class="left">Amount of space</td>
             <td>20GB</td>
             <td>40GB</td>
             <td>100GB</td>
             <td>Unlimeted</td>
         </tr>
         <tr>
-            <td>Bandwidth per month</td>
+            <td class="left">Bandwidth per month</td>
             <td>120GB</td>
             <td>240GB</td>
             <td>610GB</td>
             <td>1300GB</td>
         </tr>
         <tr>
-            <td>Email accounts</td>
+            <td class="left">Email accounts</td>
             <td>1</td>
             <td>15</td>
             <td>60</td>
             <td>Unlimeted</td>
         </tr>
         <tr>
-            <td>MySQL databases</td>
+            <td class="left">MySQL databases</td>
             <td>1</td>
             <td>15</td>
             <td>60</td>
             <td>Unlimeted</td>
         </tr>
         <tr>
-            <td>25h support</td>
+            <td class="left">25h support</td>
             <td>No</td>
             <td>Yes</td>
             <td>Yes</td>
             <td>Yes</td>
         </tr>
         <tr>
-            <td>Support tickets per month</td>
+            <td class="left">Support tickets per month</td>
             <td>2</td>
             <td>6</td>
             <td>14</td>
@@ -65,10 +65,10 @@
     <tfoot>
         <tr>
             <td><pre></pre></td>
-            <td><a href=""></a>START</td>
-            <td><a href=""></a>START</td>
-            <td><a href=""></a>START</td>
-            <td><a href=""></a>START</td>
+            <td><button>start</button></td>
+            <td><button>start</button></td>
+            <td><button>start</button></td>
+            <td><button>start</button></td>
         </tr>
     </tfoot>
 </table>
